--- a/index.html
+++ b/index.html
@@ -3,9 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="style.css">
     <title>To Do List</title>
 </head>
 <body>
+    <div class="main-container">
+        <h1>TO DO LIST</h1>
+        <form>
+            <input type="text" id="Task-input" placeholder="Add Task">
+            <button id="submit-btn" type="submit"><i class="fa-solid fa-plus" style="color: #ffffff;"></i></button>
+        </form>
+        <div class="all-Tasks-box">
+            
+        </div>
+    </div>
     
 </body>
 </html>
