reference to the structure of the Task with style

--- a/index.html
+++ b/index.html
@@ -15,7 +15,26 @@
             <button id="submit-btn" type="submit"><i class="fa-solid fa-plus" style="color: #ffffff;"></i></button>
         </form>
         <div class="all-Tasks-box">
-            
+            <!-- This is a reference to the structure of the Task. -->
+
+            <!-- <div class="task">
+                <div class="txt-box">
+                    <h2>Task name</h2>
+                    <p>date</p>
+                </div>
+                <div class="status">
+                    <label for="select-box">Status :</label>
+                    <select id="select-box">
+                        <option selected>None</option>
+                        <option>In Progress</option>
+                        <option>Completed</option>
+                    </select>
+                </div>
+                <div class="icons">
+                    <i class="fa-solid fa-trash" style="color: #ff1414;"></i>
+                    <i class="fa-solid fa-pen-to-square" style="color: #FFD43B;"></i>
+                </div>
+            </div> -->
         </div>
     </div>
     
