responsive design for tablet and mobile

--- a/index.html
+++ b/index.html
@@ -20,20 +20,23 @@
             <!-- <div class="task">
                 <div class="txt-box">
                     <h2>Task name</h2>
-                    <p>date</p>
+                    <p>2025-05-07 01:15</p>
                 </div>
-                <div class="status">
-                    <label for="select-box">Status :</label>
-                    <select id="select-box">
-                        <option selected>None</option>
-                        <option>In Progress</option>
-                        <option>Completed</option>
-                    </select>
+                <div class="inner-box">
+                    <div class="status">
+                        <label for="select-box">Status :</label>
+                        <select id="select-box">
+                            <option selected>None</option>
+                            <option>In Progress </option>
+                            <option>Completed </option>
+                        </select>
+                    </div>
+                    <div class="icons">
+                        <i class="fa-solid fa-trash" style="color: #ff1414;"></i>
+                        <i class="fa-solid fa-pen-to-square" style="color: #FFD43B;"></i>
+                    </div>
                 </div>
-                <div class="icons">
-                    <i class="fa-solid fa-trash" style="color: #ff1414;"></i>
-                    <i class="fa-solid fa-pen-to-square" style="color: #FFD43B;"></i>
-                </div>
+                
             </div> -->
         </div>
     </div>
