--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
             <button id="submit-btn" type="submit"><i class="fa-solid fa-plus" style="color: #ffffff;"></i></button>
         </form>
         <div class="all-Tasks-box">
+            
+            <h2>No tasks yet</h2>
             <!-- This is a reference to the structure of the Task. -->
 
             <!-- <div class="task">
@@ -40,6 +42,6 @@
             </div> -->
         </div>
     </div>
-    
+    <script src="script.js"></script>
 </body>
 </html>
